2007-04-22 Borut Razem <borut.razem AT siol.net>

	* support/scripts/listerr.c: program to create the list of errors and
	  warnings list from - added
	* doc/sdccman.lyx: removed the note
	  "For list of warnings and corresponding codes, see err_warn.txt"
	* src/SDCCsymt.c: fixed bug #1699804:
	  Bug with some uses of sizeof(static local array) (MCS51)
	* support/regression/tests/bug-1699804.c: added

2007-04-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/mcs51/asmain.c (search_path_append, search_path_fopen): new, added,
	  (main): added option -i,
	  (asmbl, case S_INCL): use search_path_fopen,
	  mostly from patch 1579668 by Peter Miller, thanks
	* src/z80/main.c: fixed typo --callee-saves-bc
	* device/include/mcs51/compiler.h: added sfrword for Tasking

2007-04-20 Borut Razem <borut.razem AT siol.net>

	* src/z80/main.c: replaced reserved keyword asm with asmblr

2007-04-19 Borut Razem <borut.razem AT siol.net>

	* src/port.h: use const poiters to strings
	* src/SDCCargs.h: declared getStringArg() and getIntArg()
	* src/pic16/main.c: include SDCCargs.h
	* src/SDCCglobl.h: code_seg and const_seg are not pointers to
	  const char, since the strings are dynamically allocated
	* src/SDCCmain.c: options.code_seg and options.const_seg are
	  dynamically allocated; check port specific command line options
	  before the general ones
	* src/z80/main.c: fixed bug #1631895: codeseg/constseg #pragma fail

2007-04-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/ds400rom.h,
	* device/lib/ds390/lcd390.c,
	* device/lib/ds390/memcpyx.c,
	* device/lib/ds390/rtc390.c,
	* device/lib/ds400/ds400rom.c,
	* device/lib/ds400/memcpyx.c,
	* device/lib/hc08/_ret.c: more replacements of keywords with their
	  double underscore equivalents
	* device/lib/ds390/Makefile.in,
	* device/lib/ds400/Makefile.in,
	* device/lib/gbz80/Makefile.in,
	* device/lib/hc08/Makefile.in,
	* device/lib/mcs51/Makefile.in,
	* device/lib/z80/Makefile.in: added --std-c89 to CFLAGS
